Fix date alignment problem and wrap the post's date in a time tag

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -252,10 +252,6 @@ footer {
   article {
     margin-bottom: 20px;
   }
-
-  .archive-date {
-    text-align: left;
-  }
 }
 
 @media screen and (max-width: 570px) {
